--- a/src/app/shared/component/filter/filter-container/filter-container.component.scss
+++ b/src/app/shared/component/filter/filter-container/filter-container.component.scss
@@ -21,16 +21,16 @@
 
 .black-background {
     margin-top: 100px;
-    background: #8b8b8b;
+    background: black;
     padding-top: 7px;
     padding-bottom: 7px;
-    border-radius: 5px 5px 5px 5px;
+    border-radius: 15px 15px 15px 15px;
 }
 
 .background-color {
     background-color: #c7c7c7;
     margin-bottom: 70px;
-    border-radius: 5px 5px 5px 5px;
+    border-radius: 15px 15px 15px 15px;
 }
 
 .center-filter {
