--- a/src/app/modules/register/register-company/register-company.component.scss
+++ b/src/app/modules/register/register-company/register-company.component.scss
@@ -57,6 +57,18 @@
     font-size: 20px;
     margin-bottom: 15px;
 }
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-end {
+    border-radius: 0 20px 20px 0 !important;
+    flex-grow: 1 !important;
+  }
+  ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-start {
+    border-radius: 20px 0 0 20px !important;
+    flex-grow: 1 !important;
+  }
+  ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+    background-color: white;
+    border-radius: 20px 20px 20px 20px !important;
+  }
 
 mat-divider {
     margin-bottom: 7px;
