--- a/src/app/shared/property-details/property-details.component.scss
+++ b/src/app/shared/property-details/property-details.component.scss
@@ -62,7 +62,18 @@ html {
     }
 
 }
-
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-end {
+    border-radius: 0 20px 20px 0 !important;
+    flex-grow: 1 !important;
+  }
+  ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-start {
+    border-radius: 20px 0 0 20px !important;
+    flex-grow: 1 !important;
+  }
+  ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+    background-color: rgb(241, 241, 241);
+    border-radius: 20px 20px 20px 20px !important;
+  }
 
 .contact{
     margin-left: 10px;
