--- a/src/styles.scss
+++ b/src/styles.scss
@@ -277,6 +277,19 @@ left: calc(50% - 10px) !important;
     }
 }
 
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-end {
+    border-radius: 0 20px 20px 0 !important;
+    flex-grow: 1 !important;
+  }
+  ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-start {
+    border-radius: 20px 0 0 20px !important;
+    flex-grow: 1 !important;
+  }
+  ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+    background-color: rgb(241, 241, 241);
+    border-radius: 20px 20px 20px 20px !important;
+  }
+
 .main-characteristics{
     p{
         margin-bottom: 0px;
